# FunctionalCpp

./: CMakeLists.txt  Lambdas.h  LazySeq.h  LazySeq.hpp  LazySeqLib.h  OrderedLazySeq.h  OrderedLazySeq.hpp  README.md  ReversedLazySeq.h  ReversedLazySeq.hpp  SimpleCopyFunction.h  SliceHolder.h  SmartFunction.h  VectorHolder.h  compile&run.bat  main.cpp  main.h  run.bat
